--- a/src/sections/styles/hero.css
+++ b/src/sections/styles/hero.css
@@ -102,6 +102,22 @@
   }
 }
 
+@media screen and (max-width: 400px) {
+  .hero {
+    font-size: 1.2rem;
+    margin-top: 1rem;
+  }
+
+  .top{
+    margin-bottom: 1rem;
+  }
+
+  .bottom{
+    margin-top: 1rem;
+  }
+}
+
+
 .icon-container .gatsby-image-wrapper {
   margin: auto;
   width: 3rem;
